# skiring

./: .gitignore  .hgignore  COPYING  Makefile.am  Makefile.in  README.md  coding.c  coding.h  config.h  configure  configure.ac  dbpw  package.sh  ring.c  ring.h  set_version.sh  skiring.c  skiring.h
.github/workflows/: makefile.yml  package.yml
pkg/debian/test/: Dockerfile  run.sh
pkg/redhat/: Dockerfile
pkg/redhat/test/: Dockerfile  run.sh
skiring.xcodeproj/: project.pbxproj
skiring.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
